Avance hasta el 21 jul 2022

--- a/spring-cloud-ms-sentence/src/main/resources/application.yml
+++ b/spring-cloud-ms-sentence/src/main/resources/application.yml
@@ -6,3 +6,51 @@ spring:
   config:
     import:
     - configserver:http://localhost:8001
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      minimumNumberOfCalls: 5
+      permittedNumberOfCallsInHalfOpenState: 3
+      automaticTransitionFromOpenToHalfOpenEnabled: true
+      waitDurationInOpenState: 5s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+      recordExceptions:
+        - feign.FeignException.InternalServerError
+        - java.lang.Exception
+      ignoreExceptions:
+        - com.example.sentence.exceptions.CustomException
+    shared:
+      slidingWindowSize: 100
+      permittedNumberOfCallsInHalfOpenState: 30
+      waitDurationInOpenState: 1s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+      ignoreExceptions:
+        - com.example.sentence.exceptions.CustomException
+  instances:
+    adjectiveCB:
+      baseConfig: default
+    nounCB:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      minimumNumberOfCalls: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      waitDurationInOpenState: 5s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: "ALWAYS"
+    metrics:
+      enabled: true
+  metrics:
+    tags:
+      applicattion: ${spring.application.name}
