--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -5,5 +5,10 @@ spring:
         git:
           uri: https://github.com/mayerhorna/spring-cloud-config-server3
           search-paths: ConfigData
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
-  port: 8001         
+  port: 8001
