--- a/spring-cloud-eureka-server/src/main/resources/application.yml
+++ b/spring-cloud-eureka-server/src/main/resources/application.yml
@@ -43,4 +43,18 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka-primary:8011/eureka/,http://eureka-secondary:8012/eureka/
-    
+
+       
+---
+spring:
+  profiles: dev
+server:
+  port: 8010
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
