--- a/spring-cloud-ms-word/src/main/resources/application.yml
+++ b/spring-cloud-ms-word/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config: 
     import: configserver:http://localhost:8001  
 server:
-  port: 7001
+  port: ${PORT:${SERVER_PORT:0}}
 
 eureka:
   instance:
