--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -24,9 +24,8 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins: "*"
-            allowedMethods:
-            - GET
-            - POST  
+            allowedMethods: "*"
+            allowedHeaders: "*"
   security:
     oauth2:
       resourceserver:
